# vinkeljern

./: .coverage  .gitignore  AI_PROVIDERS_README.md  AI_PROVIDERS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONFIG_README.md  DEPENDENCY_MANAGEMENT.md  LICENSE  PERFORMANCE_OPTIMIZATION.md  README_WKHTMLTOPDF.txt  REFACTORING.md  ai_analyse.md  ai_providers.py  ai_providers_optimized.py  angle_generator.py  angle_processor.py  api_clients.py  api_clients_optimized.py  api_clients_wrapper.py  app.py  app_status.py  cache_manager.py  config.py  config_loader.py  config_manager.py  elcykler_analyse.html  elcykler_analyse.json  enhanced_cache.py  enhanced_timeout.py  enkel_vinkel.py  error_handling.py  fault_tolerance.py  finanspolitik_analyse.md  fix_syntax.py  formatters.py  health_dashboard.py  json_parser.py  kommunalvalg_analyse.html  main.py  (+29 more)
config/: arbejderen_profile.yaml  berlingske_profil.yaml  borsen_profil.yaml  bt_prfil.yaml  bt_profil.yaml  config.development.yaml  config.production.yaml  config.testing.yaml  dr_profil.yaml  ekstrabladet_profil.yaml  information_profil.yaml  jyllandsposten_profil.yaml  kristeligt_dagblad_profil.yaml  politiken_profil.yaml  tv2_profil.yaml  tvflux_profil.yaml  tvflux_profile.yaml  version2_profil.yaml  weekendavisen_profil.yaml
docs/: API_DOKUMENTATION.md  CONTRIBUTING.md  FEJLFINDING.md  PROFIL_FORMAT.md  UDVIKLER_GUIDE.md
templates/: base.html  detailed_report.html  error.html  index.html  report_pdf.html  results.html
tests/: conftest.py  test_core.py
venv_name/: pyvenv.cfg
venv_py311/: pyvenv.cfg
vinkeljernet/: cli.py  (+7 more)
(+15 files in other folders)
