[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vinkeljernet"
version = "0.1.0"
description = "Journalistic angle generator based on editorial DNA profiles"
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "readme.md"
authors = [
    {name = "Vinkeljernet Team"}
]

[project.urls]
Repository = "https://github.com/yourusername/vinkeljernet"
Documentation = "https://github.com/yourusername/vinkeljernet/docs"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*", "*Test"]
python_functions = "test_*"

[tool.pytest.ini_options]
markers = [
    "unit: marks a test as a unit test",
    "integration: marks a test as an integration test",
    "slow: marks a test as slow",
]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false